# VSCODE

./: .gitignore  README.md
C/: bitManipulation  bitManipulation.c  common  common.h  embedded_snipp  embedded_snipp.c  macros  macros.c  rotate_array  rotate_array.c  string_manip  string_manip.c
CPP/: bitCount  bitCount.cpp  main  main.cpp  revWord  revWord.c
CPP/GFG/: a.out  array_missing_number  array_missing_number.cpp  find_repeating_missing  find_repeating_missing.cpp  gfg_detect_loop_linkedlist.cpp  sum_of_two  sum_of_two.cpp  unique_chars  unique_chars.cpp
CPP/Multithreading/: semaphore_demo.cpp
CPP/TCPclient/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
CPP/TCPserver/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  FileReader.cpp  FileReader.h  GameroomData.h  JoinCommand.cpp  JoinCommand.h  PlayCommand.cpp  PlayCommand.h  PrintCommand.cpp  PrintCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  main.cpp
CPP_11_14_17/: a.out  main  main.cpp
CPP_11_14_17/GK8_EX/: a.out  cpp11  cpp11.cpp
CPP_11_14_17/GK8_EX/Blockchain/: main  main.cpp
CPP_11_14_17/Template_Metaprograming/: a.out  factorial  factorial.cpp  templates  templates.cpp
PYTHON/: class-training.py  optimization.py  stractured.py  training.py
